修复了两个error，目前还存在的问题是公式渲染错误

--- a/docs/软件科研技能树/人工智能AI/计算机视觉CV/图像处理/图像处理.md
+++ b/docs/软件科研技能树/人工智能AI/计算机视觉CV/图像处理/图像处理.md
@@ -21,7 +21,9 @@ Author：夏彦
 
 数学上对 <b>卷积(convolution)</b> 给出的定义是：
 
-$$(f*g)(x)=\int_{-\infty}^{\infty} f(y)g(x-y)\mathrm{d}y$$
+$$
+(f*g)(x)=\int_{-\infty}^{\infty} f(y)g(x-y)\mathrm{d}y
+$$
 
 第一次接触这个式子的时候我个人感觉是一头雾水的。但是，接下来让我们从一个更直观的角度来理解一下这个式子：
 
@@ -32,7 +34,9 @@ $$(f*g)(x)=\int_{-\infty}^{\infty} f(y)g(x-y)\mathrm{d}y$$
 
 首先，我们先来从一维离散的角度来理解卷积，即：
 
-$$(f*a)_i = \sum_{j=-m}^{m} f_j * a_{i+j}$$
+$$
+(f*a)_i = \sum_{j=-m}^{m} f_j * a_{i+j}
+$$
 
 > 当然，上面可能出现 f−1f−1 这种鬼畜的东西，但是实际上这里的 ff 数列确实是定义在整个整数轴上的（当然下标啥的是无所谓的，终点关注下面的模拟过程）
 
@@ -346,7 +350,11 @@ $$
 <div class="callout callout-bg-11 callout-border-4">
 <div class='callout-emoji'>😯</div>
 <p><b>尝试使用卷积的角度来看傅立叶变换</b></p>
-<p>观察式子 $F(u) = \int^{\infty}_{-\infty} f(x) e^{-i2\pi ux} \rm{d} x$，是不是能将它看作一个<a href="https://note.isshikih.top/cour_note/D2QD_Intro2CV/Lec03/#%E5%8D%B7%E7%A7%AF">卷积</a>式呢？</p>
+观察式子 
+
+$$F(u) = \int_{-\infty}^{\infty} f(x) e^{-i2\pi ux}\, \mathrm{d}x$$
+
+，是不是能将它看作一个<a href="https://note.isshikih.top/cour_note/D2QD_Intro2CV/Lec03/#%E5%8D%B7%E7%A7%AF">卷积</a>式呢？
 </div>
 
 <div class="callout callout-bg-11 callout-border-4">
