修改基础入门部分文档

--- a/docs/软件工程技能树/基础入门/基础课程/操作系统/容器虚拟化/容器虚拟化.md
+++ b/docs/软件工程技能树/基础入门/基础课程/操作系统/容器虚拟化/容器虚拟化.md
@@ -7,5 +7,4 @@ sidebar_position: 2
 
 # 容器虚拟化
 
-cgroup
-
+Cgroups 是 Linux 系统内核提供的一种机制，这种机制可以根据需求将一些列系统任务机器子任务整合或分离到按资源划分登记的不同组内，从而为系统资源管理提供一个的框架。简单地说，cgroups 可以限制、记录任务组所使用的物理组员（比如 CPU、Memory、IO等），为容器实现虚拟化提供了基本保证，是构建 Docker 等一些列虚拟化管理工具的基石。
