--- a/docs/软件工程技能树/基础入门/基础课程/数据库/数据库.md
+++ b/docs/软件工程技能树/基础入门/基础课程/数据库/数据库.md
@@ -7,3 +7,20 @@ sidebar_position: 4
 
 # 数据库
 
+数据库系统是一种用于高效 存储、管理和检索数据 的软件系统，由 数据库（Database）、数据库管理系统（DBMS） 和 应用程序接口 组成。它是现代信息系统的核心，支撑从网站到企业级应用的数据处理需求。
+### 数据库系统的组成
+(1) 数据库（Database）
+结构化数据的集合，以表（关系型）或文档/图（非关系型）等形式组织。
+
+
+(2) 数据库管理系统（DBMS）
+管理数据库的软件，提供数据操作、事务管理、安全控制等功能。
+
+常见 DBMS：
+
+关系型：MySQL、PostgreSQL、Oracle、SQL Server
+
+非关系型（NoSQL）：MongoDB（文档）、Redis（键值）、Neo4j（图）
+
+(3) 应用程序接口
+通过 SQL 或 API 与数据库交互（如 JDBC、ODBC）。
