--- a/docs/软件工程技能树/基础入门/基础课程/数据结构/图/图.md
+++ b/docs/软件工程技能树/基础入门/基础课程/数据结构/图/图.md
@@ -7,3 +7,25 @@ sidebar_position: 1
 
 # 图
 
+图是一种非线性数据结构，由 顶点（Vertex/Node） 和 边（Edge） 组成，用于表示实体之间的关系。
+
+- 顶点：代表实体（如社交网络中的用户）。
+
+- 边：表示顶点间的关系（如用户之间的好友关系）。
+
+### 图的分类
+- 无向图（Undirected Graph）
+
+边无方向，如微信好友关系（A-B 和 B-A 是同一关系）。
+
+- 有向图（Directed Graph）
+
+边有方向，如微博关注（A→B 不代表 B→A）。
+
+- 加权图（Weighted Graph）
+
+边带权值，如地图中城市间的距离。
+
+- 无权图（Unweighted Graph）
+
+边无权值，仅表示是否存在关系。
